# mysite

./: pyproject.toml
backend/: build.sh  pyproject.toml
backend/mysite/: settings.py  urls.py
backend/render/: models.py  urls.py  views.py
backend/render/migrations/: 0001_initial.py  0002_choice_question_delete_render_choice_question.py  0003_rename_question_render.py
backend/render/templates/: base.html  login copy 2.html  login copy.html  login.html
frontend/: package-lock.json  package.json
frontend/src/: App.js  HelloWorld.js  Login.js
mysite/render/templates/: home.html
