[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["David Zehner <david.zehner@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
flask = "^3.0.2"
bootstrap-py = "^2.0.0"
django-boost = "^2.1"
django-bootstrap5 = "^23.4"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
